Update index.html SEO

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,22 @@
     <!-- metadata -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="Sarvagya Kumar" content="Portfolio Web site of Sarvagya Kumar created using React.js " />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="description" content="Enter a brief description of your portfolio here." />
+    <meta name="keywords" content="portfolio, Sarvagya Kumar, React.js, web development, RVCE" />
+    <meta name="author" content="Sarvagya Kumar" />
+    <meta name="robots" content="index, follow" />
+    <meta name="og:title" content="Portfolio" />
+    <meta name="og:description" content="Enter a brief description of your portfolio here." />
+    <meta name="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta name="og:url" content="https://www.yourwebsite.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Portfolio" />
+    <meta name="twitter:description" content="Enter a brief description of your portfolio here." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
     <!-- title -->
     <title>Portfolio</title>
 </head>
+
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
