--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="og:title" content="Portfolio" />
     <meta name="og:description" content="Enter a brief description of your portfolio here." />
     <meta name="og:image" content="%PUBLIC_URL%/logo192.png" />
-    <meta name="og:url" content="https://www.yourwebsite.com" />
+    <meta name="og:url" content="https://www.sarvagya.live/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Portfolio" />
     <meta name="twitter:description" content="Enter a brief description of your portfolio here." />
